Fix issue with snakeyaml 1.19 in tests (arquillian-cube.snakeyaml.version)